# context-engineering-harness

./: .gitignore  CLAUDE.md  Makefile  README.md  config.toml  pyproject.toml
data/annotations/: khyativada_guidelines.md
docs/: REVIEW.md  REVIEW_adversarial.md  REVIEW_code_reviewer.md  REVIEW_kieran_python.md  REVIEW_paper_coherence.md  REVIEW_paper_feasibility.md  REVIEW_paper_scope.md  article_substack.md  canvas.html  guide.md  index.html  live_hf_rerun_plan.md  prd.md  project_report.md  release_v2.1.1_power_ext.md  release_v2.1_live_hf.md  research.md  spec.md  triz.md  v0_retrospective.md  v0_retrospective_data_snapshot.json  validation_report.md
docs/pratyaksha_images/: F14_F15_provenance.json
experiments/h1_schema_congruence/: run.py
experiments/h2_precision_rag/: run.py
experiments/h3_buddhi_manas/: run.py
experiments/h4_event_boundary/: run.py
experiments/h5_avacchedaka_multiagent/: run.py
experiments/h6_khyativada_classifier/: run_annotation.py
experiments/h7_adaptive_forgetting/: run.py
experiments/v2/: __init__.py
experiments/validate/: data.py  h1_schema.py  h2_rag.py  h3_agents.py  h4_compaction.py  h5_multiagent.py  h6_classifier.py  h7_forgetting.py  report.py  runner.py
paper/: .gitignore  build.sh  main.tex  references.bib
paper/appendices/: A_glossary.md  A_glossary.tex  B_mcp_tools.md  B_mcp_tools.tex  C_reproducibility.md  C_reproducibility.tex  D_prompts.md  D_prompts.tex  E_p6c_protocol.md  E_p6c_protocol.tex  F_negative_results.md  F_negative_results.tex  G_live_hf.tex
paper/figures_tikz/: fig1_architecture.tex  fig2_avacchedaka.tex  fig3_sublation.tex  fig4_manas_buddhi.tex  (+1 more)
release/: SHA256SUMS  SHIP.md  build_release.sh
src/: cli_bridge.py  config.py
tests/: conftest.py  test_cli_bridge.py  test_cli_bridge_v2.py  test_config.py
tools/: __init__.py
(+243 files in other folders)
