[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "context-engineering-synthesis"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.50",
    "chromadb>=0.5",
    "pydantic>=2.0",
    "scikit-learn>=1.4",
    "mlflow>=2.0",
    "numpy>=1.26",
    "pandas>=2.0",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "mcp>=1.0",
]
benchmarks = [
    "datasets>=2.20",
    "huggingface-hub>=0.24",
]
surprise = [
    "torch>=2.2",
    "transformers>=4.45",
]
surprise-vllm = [
    "vllm>=0.6.0",
    "torch>=2.2",
    "transformers>=4.45",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that require ANTHROPIC_API_KEY and make live API calls",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/experiments/*"]
